Added haalth and ready methods to kube probe
