# hw04-helm/docs/swagger.json
@@ -21,6 +21,52 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Отвеает, жив ли контейнер",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Service state"
+                ],
+                "summary": "Проверка состояния",
+                "responses": {
+                    "200": {
+                        "description": "Сервис жив"
+                    },
+                    "500": {
+                        "description": "Ошибка сервера"
+                    }
+                }
+            }
+        },
+        "/ready": {
+            "get": {
+                "description": "Отвечает, готов ли контейнер принимать трафик",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Service state"
+                ],
+                "summary": "Проверка готовности к работе",
+                "responses": {
+                    "200": {
+                        "description": "Сервис готов к работе"
+                    },
+                    "500": {
+                        "description": "Ошибка сервера"
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "description": "Создает нового пользователя в системе",
