# hw04-helm/internal/routers.go
@@ -46,6 +46,9 @@ func NewRouter() *mux.Router {
 	// Добавляем роут для Swagger UI
 	router.PathPrefix("/swagger-ui/").Handler(httpSwagger.WrapHandler)
 
+	// Сервис готов к работе
+	isReady.Store(true)
+
 	return router
 }
 
@@ -56,7 +59,10 @@ func Index(w http.ResponseWriter, r *http.Request) {
 var routes = Routes{
 	// Web page
 	Route{"Index", "GET", "/", Index},
-	// API
+	// State handlers
+	Route{"Health", "GET", "/api/v1/health", Health},
+	Route{"Ready", "GET", "/api/v1/ready", Ready},
+	// API handlers
 	Route{"CreateUser", "POST", "/api/v1/users", CreateUser},
 	Route{"DeleteUser", "DELETE", "/api/v1/users/{userId}", DeleteUser},
 	Route{"FindUserById", "GET", "/api/v1/users/{userId}", FindUserById},
